Fix header-app-icons overflow: correct right positioning from -10px to 10px

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -53,7 +53,7 @@ ul.header-menu li.header-menu-link {
 
 .header-app-icons {
   position: absolute;
-  right: -10px;
+  right: 10px;
 }
 
 .bottom-header {
